added build file; runnable tool (jar); enhancements for ThwowablesWrapper